Make it pretty.

--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
-    <!-- <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css"> -->
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+    <section>
+      <div>
+        <form>
+          <p>
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" required>
+          </p>
+          <p>
+            <label for="hairColor">Hair Color</label>
+            <input type="color" name="hairColor" required>
+          </p>
+          <p>
+            <label for="age">Age</label>
+            <input type="number" name="age" placeholder="Your Age" required>
+          </p>
+          <label for="birthplace">Birthplace</label>
+            <input type="text" name="birthplace" placeholder="Where were you born?" required>
+          <p>
+            <button class="button" type="submit">Go</button>
+          </p>
+        </form>
 
-    <form>
-      <p>
-        <label for="firstName">First Name</label>
-        <input type="text" name="firstName" required>
-      </p>
-      <p>
-        <label for="hairColor">Hair Color</label>
-        <input type="color" name="hairColor" required>
-      </p>
-      <p>
-        <label for="age">Age</label>
-        <input type="number" name="age" placeholder="Your Age" required>
-      </p>
-      <label for="birthplace">Birthplace</label>
-        <input type="text" name="birthplace" placeholder="Where were you born?" required>
-      <p>
-        <button type="submit">Go</button>
-      </p>
-    </form>
-
-    <div class="details">
-    </div>
+        <div class="details">
+        </div>
+      </div>
+    </section>
 
     <script type="text/javascript">
       var myForm = document.querySelector('form');
